WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
96011
[BlackBerry] Initialize caret rectangle with invalid location
https://bugs.webkit.org/show_bug.cgi?id=96011
Summary
[BlackBerry] Initialize caret rectangle with invalid location
Yongxin Dai
Reported
2012-09-06 13:00:46 PDT
In SelectionHandler::selectionPositionChanged() method, startCaret and endCaret are used to notify clients about new caret positions. We should initialize startCaret and endCaret with location(-1. -1), and keep them empty before they are assigned to valid values. This would help for other classes to check validity of the caret correctly.
Attachments
Patch
(3.06 KB, patch)
2012-09-06 13:42 PDT
,
Yongxin Dai
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yongxin Dai
Comment 1
2012-09-06 13:42:44 PDT
Created
attachment 162573
[details]
Patch
Rob Buis
Comment 2
2012-09-07 10:13:20 PDT
Comment on
attachment 162573
[details]
Patch LGTM.
WebKit Review Bot
Comment 3
2012-09-07 11:10:55 PDT
Comment on
attachment 162573
[details]
Patch Clearing flags on attachment: 162573 Committed
r127894
: <
http://trac.webkit.org/changeset/127894
>
WebKit Review Bot
Comment 4
2012-09-07 11:10:57 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug