[BlackBerry] Initialize caret rectangle with invalid location https://bugs.webkit.org/show_bug.cgi?id=96011

Patch by Yongxin Dai <yodai@rim.com> on 2012-09-07
Reviewed by Rob Buis.

In SelectionHandler::selectionPositionChanged() method, startCaret and
endCaret are used to notify clients about new caret positions. This patch
initializes startCaret and endCaret with location(-1. -1), and keeps them
empty before they are assigned to valid values. This would help for other
classes to check validity of the caret correctly.

Internal reviewed by Mike Fenton.

* WebKitSupport/SelectionHandler.cpp:
(BlackBerry::WebKit::adjustCaretRects):
(BlackBerry::WebKit::SelectionHandler::selectionPositionChanged):

Canonical link: https://commits.webkit.org/113995@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@127894 268f45cc-cd09-0410-ab3c-d52691b4dbfc